Add basic CSS styling to homepage

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <head>
     <meta charset="UTF-8">
     <title>Odin Recipes Project</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="text header">Odin Recipes</h1>
     
-    <h2>Recipes List</h2>
-    <ul>
+    <h2 class="text header">Recipes List</h2>
+    <ul class="text">
       <li><a href="./recipes/onionchicken.html" target="_blank" rel="noopener noreferrer">Onion Chicken</a></li>
       <li><a href="./recipes/macandcheese.html" target="_blank" rel="noopener noreferrer">One Pot Mac and Cheese</a></li>
       <li><a href="./recipes/shrimppastaalfredo.html" target="_blank" rel="noopener noreferrer">Shrimp Pasta Alfredo</a></li>
